--- a/reference/users.oas.yaml
+++ b/reference/users.oas.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 x-stoplight:
   id: fhtjsxy5cr8js
 info:
-  title: users.openapi
+  title: Users API
   version: '1.0'
 servers:
   - url: 'http://localhost:3000'
