--- a/reference/users.oas.yaml
+++ b/reference/users.oas.yaml
@@ -4,8 +4,7 @@ x-stoplight:
 info:
   title: Users API
   version: '1.0'
-servers:
-  - url: 'http://localhost:3000'
+servers: []
 paths:
   '/users/{userId}':
     parameters:
