--- a/reference/users.oas.yaml
+++ b/reference/users.oas.yaml
@@ -63,6 +63,10 @@ paths:
                     dateOfBirth: '1996-08-24'
                     emailVerified: false
                     createDate: '2020-11-18'
+          headers:
+            X-Rate-Limit:
+              schema:
+                type: string
         '400':
           description: Missing Required Information
           content:
@@ -89,6 +93,13 @@ paths:
                   dateOfBirth: '1996-08-24'
         description: Post the necessary fields for the API to create a new user.
       description: Create a new user.
+      security:
+        - API Key - 1: []
     parameters: []
 components:
   schemas: {}
+  securitySchemes:
+    API Key - 1:
+      name: API Key
+      type: apiKey
+      in: query
