--- a/reference/users.oas.yaml
+++ b/reference/users.oas.yaml
@@ -21,7 +21,7 @@ paths:
       tags: []
       responses:
         '200':
-          description: User Found
+          description: User found.
           content:
             application/json:
               schema:
@@ -95,7 +95,7 @@ paths:
                   lastName: Fellow
                   email: bob.fellow@gmail.com
                   dateOfBirth: '1996-08-24'
-        description: Post the necessary fields for the API to create a new user.
+        description: Post the necessary fields for the API to create a new user... random change.
       description: Create a new user.
       security:
         - API Key - 1: []
